--- a/src/components/QueryEditor/index.module.scss
+++ b/src/components/QueryEditor/index.module.scss
@@ -19,6 +19,7 @@
     box-shadow: rgba(0, 0, 0, 0.37) 0 0 0 1px;
     outline: none;
     width: 100%;
+    height: 300px;
     max-width: 1000px;
 
     &.focus {
