--- a/src/features/QueryBuilderTool/ui/QueryBuilderRibbonHeader/index.module.scss
+++ b/src/features/QueryBuilderTool/ui/QueryBuilderRibbonHeader/index.module.scss
@@ -24,6 +24,11 @@
       display: flex;
       flex-direction: row;
       margin-left: 20px;
+
+      .cta {
+        background-color: #ffffff;
+        color: $primaryColor;
+      }
     }
   }
 }
