--- a/src/features/QueryBuilderTool/ui/QueryResults/index.module.scss
+++ b/src/features/QueryBuilderTool/ui/QueryResults/index.module.scss
@@ -1,3 +1,22 @@
 .root {
-  height: calc(100vh - 230px - 64px);
+  border-radius: 10px;
+  width: 100%;
+  max-height: 450px;
+  overflow-y: auto;
+  overflow-x: auto;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 6px 24px 0, rgba(0, 0, 0, 0.08) 0 0 0 1px;
+
+  tbody {
+    tr:nth-child(odd) {
+      background-color: #eef0f8;
+    }
+
+    tr:nth-child(even) {
+      background-color: #e4eaf5;
+    }
+
+    tr:hover {
+      background-color: #f5f5f5;
+    }
+  }
 }
