--- a/src/features/QueryBuilderTool/ui/index.module.scss
+++ b/src/features/QueryBuilderTool/ui/index.module.scss
@@ -9,8 +9,8 @@
 
     .querySidebarContainer {
       background: lighten($primaryColor, 56%);
-      height: calc(100vh - #{$headerHeight}px);
-      width: #{$sidebarContainerWidth}px;
+      min-height: calc(100vh - #{$headerHeight}px);
+      width: #{$sidebarContainerWidth - 10}px;
       padding: 15px 5px;
       overflow-y: auto;
     }
@@ -43,6 +43,7 @@
             margin-bottom: 10px;
             display: flex;
             justify-content: end;
+            max-width: 1000px;
 
             .editBtn {
               background-color: #713063;
@@ -66,6 +67,8 @@
           }
         }
         .queryResultsWrapper {
+          margin-top: 30px;
+          width: 100%;
         }
       }
     }
