--- a/src/features/QueryBuilderTool/ui/QueryResults/index.module.scss
+++ b/src/features/QueryBuilderTool/ui/QueryResults/index.module.scss
@@ -1,22 +1,38 @@
 .root {
-  border-radius: 10px;
-  width: 100%;
-  max-height: 450px;
-  overflow-y: auto;
-  overflow-x: auto;
-  box-shadow: rgba(0, 0, 0, 0.05) 0 6px 24px 0, rgba(0, 0, 0, 0.08) 0 0 0 1px;
+  .messageBlock {
+    color: #2c3e50;
+    background: #d1d5db;
+    padding: 15px;
+    overflow: auto;
+    border-radius: 10px;
+    max-height: 80px;
+    margin-bottom: 20px;
 
-  tbody {
-    tr:nth-child(odd) {
-      background-color: #eef0f8;
+    .error {
+      color: rgba(170, 39, 39, 0.78);
     }
+  }
 
-    tr:nth-child(even) {
-      background-color: #e4eaf5;
-    }
+  .tableWrapper {
+    border-radius: 10px;
+    width: 100%;
+    max-height: 450px;
+    overflow-y: auto;
+    overflow-x: auto;
+    box-shadow: rgba(0, 0, 0, 0.05) 0 6px 24px 0, rgba(0, 0, 0, 0.08) 0 0 0 1px;
 
-    tr:hover {
-      background-color: #f5f5f5;
+    tbody {
+      tr:nth-child(odd) {
+        background-color: #eef0f8;
+      }
+
+      tr:nth-child(even) {
+        background-color: #e4eaf5;
+      }
+
+      tr:hover {
+        background-color: #f5f5f5;
+      }
     }
   }
 }
