optimized the function imports

--- a/src/features/QueryBuilderTool/ui/index.module.scss
+++ b/src/features/QueryBuilderTool/ui/index.module.scss
@@ -47,7 +47,7 @@
           .buttonWrapper {
             margin-bottom: 10px;
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
             max-width: 1000px;
 
             .editBtn {
